# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]
### Added
- This CHANGELOG will contain change log of anything I do on this repository.
- I will try to explain the why questions
- I am using the gitlab web IDE. I don't know how to do tags yet.