@@ -9,3 +9,4 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - This CHANGELOG will contain change log of anything I do on this repository.
 - I will try to explain the why questions
 - I am using the gitlab web IDE. I don't know how to do tags yet.
+- A hello world in Java
